# cantoLLM

./: .gitignore  CLAUDE.md  CUDA-TEST-AGENT-INST.md  LICENSE  PLAN.md  README.md  bench-spec.md  canto  continuous-batching-plan.md  continuous_batching.md  cuda-bringup.md  fable-review.md  old_research_continuous_batching.md  process-split-design.md  prompts.txt  pyproject.toml  q3  sdpa-results.md  shape-buckets-results.md  step-profiling.md
bench/: probe_sdpa.py  profile_step.py
bench/configs/: ab_5090_sdpa.toml  ab_5090_shape_buckets.toml  baseline_5090_4b.toml  baseline_5090_batched.toml  baseline_5090_longctx.toml  baseline_5090_sequential.toml  explore_5090_wide_slots.toml  knee_5090_openloop.toml  smoke_mac.toml
bench/history/2026-07-12T175941_de29e81_smoke-mac/: run.json
bench/history/2026-07-17T180702_de29e81_smoke-mac/: run.json
bench/history/2026-07-17T214258_de29e81_smoke-mac/: run.json
bench/history/2026-07-17T221356_de29e81_smoke-mac/: run.json
bench/history/2026-07-18T133712_30c8787_baseline-5090-batched/: run.json
bench/history/2026-07-18T150139_30c8787_baseline-5090-sequential/: run.json
bench/history/2026-07-18T151050_30c8787_baseline-5090-4b/: run.json
bench/history/2026-07-18T152103_30c8787_baseline-5090-longctx/: run.json
bench/history/2026-07-18T152842_30c8787_knee-5090-openloop/: run.json
bench/history/2026-07-18T154604_e8e36b9_explore-5090-wide-slots/: run.json
bench/history/2026-07-19T101712_02e30e0_recheck-step-opts/: run.json
bench/workloads/: code.jsonl  long_context.jsonl  multi_turn.jsonl  short_chat.jsonl
prototypes/continuous_batching/: HINTS.md  INSTRUCTIONS.md  cb_types.py  padded_kv.py  reference.py  runner.py  sampler.py  scheduler.py  toy_model.py
src/cantollm/: decoder.py  generator.py  kv_cache.py  kv_pool.py  main.py  registry.py  runtime.py  spec.py  speculative.py  standard.py  stats.py  stream_events.py
src/qwen3/: api_types.py  client.py  conversation.py  decoder.py  generator.py  main.py  model.py  presenter.py  server.py  slow_generator.py  speculative.py  stats.py  tokenizer.py  weights.py
tests/: bench_server_stub.py  cb_helpers.py  compare_implementations.py  fakes.py  test_admission.py  test_api_contract.py  test_attention.py  test_batched_model.py  test_batching_stubs.py  test_bench_config.py  test_bench_e2e_tiny.py  test_bench_executor.py  test_bench_loadgen.py  test_bench_metrics.py  test_bench_service.py  test_bench_sse_client.py  test_bench_workloads.py  test_cb_end_to_end.py  test_cb_engine_shell.py  test_cb_scheduler.py  test_debug_endpoint.py  test_decoder.py  test_engine_stats_accumulator.py  test_engine_step_stats.py  test_hf_parity.py  test_incremental_decoder.py  test_kv_pool.py  test_logits_processors.py  test_logprobs.py  test_model.py  test_openai_contract.py  test_padded_equivalence.py  test_phase.py  test_process_engine.py  test_qwen3.py  test_rope.py  test_sampler.py  test_sdpa_equivalence.py  test_shape_vocabulary.py  test_speculative.py  (+6 more)
tests/reference/: generate_reference.py  qwen3_0_6b_hf_reference.json
viz/: README.md  index.html  tokenizer_server.py  trace_cb.py  trace_common.py  trace_forward.py  trace_speculative.py  trace_split.py  trace_weights.py
(+70 files in other folders)
