[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cantollm"]

[project]
name = "cantoLLM"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # >=2.8: the default PyPI Linux wheels bundle CUDA 12.8+, which is what
    # Blackwell (5090, sm_120) needs — older wheels fail with "no kernel
    # image is available" at the first forward pass.
    "torch>=2.8.0",
    "numpy==1.26.4",
    "tokenizers>=0.20.0",
    "huggingface_hub>=0.20.0",
    "safetensors>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# CUDA on the 5090 (Blackwell, sm_120): no index override needed — default
# PyPI Linux wheels for torch >= 2.8 bundle CUDA 12.8+, which includes
# sm_120. The box needs an NVIDIA driver >= 570 (the CUDA 12.8 floor).
# If a specific CUDA variant ever becomes necessary, pin it Linux-only so
# Mac dev stays on the default wheels:
# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true
#
# [tool.uv.sources]
# torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
